--- a/零基础HTML编码.html
+++ b/零基础HTML编码.html
@@ -5,139 +5,142 @@
 	<title>零基础HTML编码</title>
 </head>
 <body>
-	<h1>网站一级标题</h1>
-	<ul>
-		<li>导航链接一</li>
-		<li>导航链接二</li>
-		<li>导航链接三</li>
-		<li>导航链接四</li>
-	</ul>
-	<h2>文章一级标题</h2>
-	<h3>文章二级标题</h3>
-	<span>文章作者</span>	<span>文章发表的时间</span>
-	<p>这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,<a href="http://ife.baidu.com">这里有个连接到http://ife.baidu.com的连接</a>这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,</p>
-	<img src="wu.jpg"><br>
-	<p>这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,<a href="http://ife.baidu.com">这里有个连接到http://ife.baidu.com的连接</a>这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,</p>
-	<h2>另一篇文章的一级标题</h2>
-	<h3>文章二级标题</h3>
-	<span>文章作者</span>	<span>文章发表的时间</span>
-	<p>这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,<a href="http://ife.baidu.com">这里有个连接到http://ife.baidu.com的连接</a>这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,</p>
-	<img src="wu.jpg"><br>
-	<ul>
-		<li>列表项目一</li>
-		<li>列表项目二</li>
-		<li>列表项目三</li>
-	</ul>
-	<h3>图片</h3>
-	<dl>
-		<dt>好看的图片</dt>
-		<dd><img src="wu.jpg"></dd>
-		<dt>好看的图片</dt>
-		<dd><img src="wu.jpg"></dd>
-		<dt>好看的图片</dt>
-		<dd><img src="wu.jpg"></dd>
-		<dt>好看的图片</dt>
-		<dd><img src="wu.jpg"></dd>
-		<dt>好看的图片</dt>
-		<dd><img src="wu.jpg"></dd>
-		<dt>好看的图片</dt>
-		<dd><img src="wu.jpg"></dd>
-		<dt>好看的图片</dt>
-		<dd><img src="wu.jpg"></dd>
-		<dt>好看的图片</dt>
-		<dd><img src="wu.jpg"></dd>
-		<dt>好看的图片</dt>
-		<dd><img src="wu.jpg"></dd>
-		<dt>好看的图片</dt>
-		<dd><img src="wu.jpg"></dd>
-	</dl>
-	<h2>最后一篇文章的一级标题</h2>
-	<h3>文章二级标题</h3>
-	<span>文章作者</span>	<span>文章发表的时间</span>
-	<ol>
-		<li>排名1</li>
-		<li>排名2</li>
-		<li>排名3</li>
-	</ol>
-	<p>下面是一个表格，给表格加了一个border="1"好让你看出是一个表格</p>
-	<table border="1">
-		<tr>
-			<th>表头</th>
-			<th>表头</th>
-			<th>表头</th>
-		</tr>
-		<tr>
-			<td>表内容单元格</td>
-			<td>表内容单元格</td>
-			<td><a href="###">操作</a></td>
-		</tr>
-		<tr>
-			<td>表内容单元格</td>
-			<td>表内容单元格</td>
-			<td><a href="###">操作</a></td>
-		</tr>
-		<tr>
-			<td>表内容单元格</td>
-			<td>表内容单元格</td>
-			<td><a href="###">操作</a></td>
-		</tr>
-		<tr>
-			<td>表内容单元格</td>
-			<td>表内容单元格</td>
-			<td><a href="###">操作</a></td>
-		</tr>
-		<tr>
-			<td>总计</td>
-			<td colspan="2">1000</td>
-		</tr>
-	</table>
-	<div>
-		<h2>这里以后是一个侧栏，这是侧栏的标题</h2>
-		<h3>侧栏注册窗口的标题</h3>
-		<form>
-			<label>
-				请输入邮箱地址
-				<input type="text" name="email" placeholder="email">				
-			</label>
-			<p>邮箱地址请按要求格式输入</p>
-			<label>
-					请输入密码
-					<input type="password" placeholder="password">
-			</label>
-			<label>
-					请重复输入密码
-					<input type="password" placeholder="password">
-			</label>
-				<p>密码为6-16位的英文数字</p>
-			<label>
-				性别:
-				<input type="radio" name="sex">男
-				<input type="radio" name="sex">女
-			</label>
-			<label>
-				城市:
-				<select>
-					<option>北京</option>
-					<option>上海</option>
-					<option>深圳</option>
-				</select>
-			</label>
-			<label>
-				爱好:
-				<input type="checkbox" name="sport">运动
-				<input type="checkbox" name="art">艺术
-				<input type="checkbox" name="science">科学
-			</label>
-			<label>
-				个人描述:
-				<textarea></textarea>
-			</label>
-			<input type="submit" value="确认提交">
-		</form>
+	<nav>
+		<h1>网站一级标题</h1>
+		<ul>
+			<li>导航链接一</li>
+			<li>导航链接二</li>
+			<li>导航链接三</li>
+			<li>导航链接四</li>
+		</ul>
+	</nav>	
+	<section>
+		<h2>文章一级标题</h2>
+		<h3>文章二级标题</h3>
+			<span>文章作者</span>	<span>文章发表的时间</span>
+		<p>这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,<a href="http://ife.baidu.com">这里有个连接到http://ife.baidu.com的连接</a>这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,</p>
+			<img src="images/wu.jpg"><br>
+		<p>这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,<a href="http://ife.baidu.com">这里有个连接到http://ife.baidu.com的连接</a>这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,</p>
+		<h2>另一篇文章的一级标题</h2>
+		<h3>文章二级标题</h3>
+			<span>文章作者</span>	<span>文章发表的时间</span>
+		<p>这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,<a href="http://ife.baidu.com">这里有个连接到http://ife.baidu.com的连接</a>这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,这是一个很长的段落,</p>
+		<img src="images/wu.jpg"><br>
+		<ul>
+			<li>列表项目一</li>
+			<li>列表项目二</li>
+			<li>列表项目三</li>
+		</ul>
+		<h3>图片</h3>
+		<dl>
+			<dt>好看的图片</dt>
+			<dd><img src="images/wu.jpg"><br></dd>
+			<dt>好看的图片</dt>
+			<dd><img src="images/wu.jpg"><br></dd>
+			<dt>好看的图片</dt>
+			<dd><img src="images/wu.jpg"><br></dd>
+			<dt>好看的图片</dt>
+			<dd><img src="images/wu.jpg"><br></dd>
+			<dt>好看的图片</dt>
+			<dd><img src="images/wu.jpg"><br></dd>
+			<dt>好看的图片</dt>
+			<dd><img src="images/wu.jpg"><br></dd>
+			<dt>好看的图片</dt>
+			<dd><img src="images/wu.jpg"><br></dd>
+			<dt>好看的图片</dt>
+			<dd><img src="images/wu.jpg"><br></dd>
+			<dt>好看的图片</dt>
+			<dd><img src="images/wu.jpg"><br></dd>
+			<dt>好看的图片</dt>
+			<dd><img src="images/wu.jpg"><br></dd>
+		</dl>
+		<h2>最后一篇文章的一级标题</h2>
+		<h3>文章二级标题</h3>
+			<span>文章作者</span>	<span>文章发表的时间</span>
+		<ol>
+			<li>排名1</li>
+			<li>排名2</li>
+			<li>排名3</li>
+		</ol>
+		<p>下面是一个表格，给表格加了一个border="1"好让你看出是一个表格</p>
+		<table border="1">
+			<tr>
+				<th>表头</th>
+				<th>表头</th>
+				<th>表头</th>
+			</tr>
+			<tr>
+				<td>表内容单元格</td>
+				<td>表内容单元格</td>
+				<td><a href="###">操作</a></td>
+			</tr>
+			<tr>
+				<td>表内容单元格</td>
+				<td>表内容单元格</td>
+				<td><a href="###">操作</a></td>
+			</tr>
+			<tr>
+				<td>表内容单元格</td>
+				<td>表内容单元格</td>
+				<td><a href="###">操作</a></td>
+			</tr>
+			<tr>
+				<td>表内容单元格</td>
+				<td>表内容单元格</td>
+				<td><a href="###">操作</a></td>
+			</tr>
+			<tr>
+				<td>总计</td>
+				<td colspan="2">1000</td>
+			</tr>
+		</table>
 		<div>
-			版权所有&copy;
-		</div>
-		
-	</div>
+			<h2>这里以后是一个侧栏，这是侧栏的标题</h2>
+			<h3>侧栏注册窗口的标题</h3>
+			<form>
+				<label>
+					请输入邮箱地址
+					<input type="text" name="email" placeholder="email">				
+				</label>
+				<p>邮箱地址请按要求格式输入</p>
+				<label>
+						请输入密码
+						<input type="password" placeholder="password">
+				</label>
+				<label>
+						请重复输入密码
+						<input type="password" placeholder="password" maxlength="16">
+				</label>
+					<p>密码为6-16位的英文数字</p>
+				<label>
+					性别:
+					<input type="radio" name="sex">男
+					<input type="radio" name="sex">女
+				</label>
+				<label>
+					城市:
+					<select>
+						<option>北京</option>
+						<option>上海</option>
+						<option>深圳</option>
+					</select>
+				</label>
+				<label>
+					爱好:
+					<input type="checkbox" name="sport">运动
+					<input type="checkbox" name="art">艺术
+					<input type="checkbox" name="science">科学
+				</label>
+				<label>
+					个人描述:
+					<textarea></textarea>
+				</label>
+				<input type="submit" value="确认提交">
+			</form>	
+		</div>	
+	</section>
+	<footer>
+		版权所有&copy;
+	</footer>
 </body>
 </html>
