--- a/定位和居中问题-table.html
+++ b/定位和居中问题-table.html
@@ -45,9 +45,29 @@
 				right:-50px;
 				bottom:-50px;
 		}
+		/* 连接 */
+		.link{
+			position: absolute;
+			top:0;
+			margin-left:40%;
+		}
+		.link a{
+			display: inline-block;
+			text-decoration: none;
+			margin-right: 10px;
+			font-weight: bold;
+			background: black;
+			color:white;
+			padding:10px;
+		}
+		.link a:hover{
+			background: lightblue;
+			color:black;
+		}
 	</style>
 </head>
 <body>
+<div class="link"><a href="http://jerrymark1.github.io/mypage2/定位和居中问题-position.html">定位居中</a><a href="http://jerrymark1.github.io/mypage2/定位和居中问题-flex.html">flex居中</a><a href="http://jerrymark1.github.io/mypage2/定位和居中问题-table.html">表格居中</a></div>
 	<div class="wrap">
 		<div class="content">
 			<div class="inner">
