--- a/定位和居中问题-flex.html
+++ b/定位和居中问题-flex.html
@@ -35,17 +35,37 @@
 			background: #fc0;
 		}
 		.top-corner{
-				left:-50px;
-				top:-50px;
+			left:-50px;
+			top:-50px;
 
 		}
 		.bottom-corner{
-				right:-50px;
-				bottom:-50px;
+			right:-50px;
+			bottom:-50px;
+		}
+		/* 连接 */
+		.link{
+			position: absolute;
+			top:0;
+			margin-left:40%;
+		}
+		.link a{
+			display: inline-block;
+			text-decoration: none;
+			margin-right: 10px;
+			font-weight: bold;
+			background: black;
+			color:white;
+			padding:10px;
+		}
+		.link a:hover{
+			background: lightblue;
+			color:black;
 		}
 	</style>
 </head>
 <body>
+	<div class="link"><a href="http://jerrymark1.github.io/mypage2/定位和居中问题-position.html">定位居中</a><a href="http://jerrymark1.github.io/mypage2/定位和居中问题-flex.html">flex居中</a><a href="http://jerrymark1.github.io/mypage2/定位和居中问题-table.html">表格居中</a></div>
 	<div class="wrap">
 		<div class="inner">
 			<div class="corner top-corner"></div>
